--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://databaserds.c9ujozbff8fu.us-east-1.rds.amazonaws.com:3306/testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=admin
 spring.datasource.password=MysqlPass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
