--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,17 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = none
 #Turn Statistics on and log SQL stmts
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #If want to see very extensive logging
 #spring.jpa.properties.hibernate.generate_statistics=true
 #logging.level.org.hibernate.type=trace
 #logging.level.org.hibernate.stat=debug
 
-
+##logging
+logging.level.root=WARN
+logging.level.software=DEBUG
 
 #==========Caching[Redis Cache]==========
 spring.cache.type=REDIS
