--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
+    id 'org.springframework.boot' version '2.0.0.RELEASE'
 }
 
 repositories {
@@ -43,15 +44,6 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 }
 
-
-task ubarJar(type: Jar) {
-    manifest {
-        attributes 'Main-Class': 'software.spring.caching.CabApplication'
-    }
-    archiveClassifier = "webapp"
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
+springBoot {
+    mainClassName = 'software.spring.caching.CabApplication'
 }
